# markidown-svc

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
.github/workflows/: docker-build.yml
script/: test.ts
src/markidown_svc/: __init__.py
