[project]
name = "markidown-svc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "falentio", email = "kfalentio@proton.me" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.0",
    "markitdown[pdf]>=0.1.3",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
